--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,14 +32,14 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
+                         <a class="btn zoombtn" href="{{ site.url }}about/">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         <a class="btn zoombtn" href="{{ site.url }}blog/">
+                         Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         <a class="btn zoombtn" href="{{ site.url }}paper-review/">
+                         Paper-review
                          </a>
                  </h3>
             </div>
