--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,10 +24,10 @@ layout: compress
                       {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
-                    {% if page.project %}
-                    <a class="btn zoombtn" href="{{site.url}}/projects/">
+                    {% if page.paper-review %}
+                    <a class="btn zoombtn" href="{{site.url}}paper-review/">
                     {% else %}
-                    <a class="btn zoombtn" href="{{site.url}}/posts/">
+                    <a class="btn zoombtn" href="{{site.url}}blog/">
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
                     </a>
