--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,13 +32,13 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}about/">
+                         <a class="btn zoombtn" href="{{ site.url }}/about/">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}blog/">
+                         <a class="btn zoombtn" href="{{ site.url }}/blog/">
                          Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}paper-review/">
+                         <a class="btn zoombtn" href="{{ site.url }}/paper-review/">
                          Paper-review
                          </a>
                  </h3>
