--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,9 +25,9 @@ layout: compress
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
                     {% if page.paper-review %}
-                    <a class="btn zoombtn" href="{{site.url}}paper-review/">
+                    <a class="btn zoombtn" href="{{site.url}}/paper-review/">
                     {% else %}
-                    <a class="btn zoombtn" href="{{site.url}}blog/">
+                    <a class="btn zoombtn" href="{{site.url}}/blog/">
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
                     </a>
