--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,10 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Blog
+                         Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Paper-review
+                         Projects
                          </a>
                  </h3>
             </div>
