--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,10 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         <a class="btn zoombtn" href="{{ site.url }}/blog">
                          Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <a class="btn zoombtn" href="{{ site.url }}/paper-review">
                          Paper-review
                          </a>
                  </h3>
