--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -22,7 +22,7 @@ layout: compress
                     </a>
                 </div>
                 <div class="post-list">
-                    {% for blog in site.posts %} 
+                    {% for blog in site.blogs %} 
                         {% if blog.paper-review == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
