--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,11 +35,11 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/blog">
-                         Blog
+                         <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         Posts
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/paper-review">
-                         Paper-review
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         Projects
                          </a>
                  </h3>
             </div>
