--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <a class="btn zoombtn" href="{{ site.url }}/paper-review">
                          Paper-review
                          </a>
                  </h3>
