--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: compress
                       {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
-                    {% if page.project %}
+                    {% if page.blog %}
                     <a class="btn zoombtn" href="{{site.url}}/blog/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/paper-review/">
