--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,10 +85,11 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
-			<li>
-				<a href="#">Posts</a>
+			<li><a href="{{ site.url }}/blog">Blog</a></li>
+            <li>
+				<a href="#">Paper-review</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
+					<li><a href="{{ site.url }}/paper-review/">All reviews</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
 			</li>
