--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,11 @@ layout: compress
                     {% if page.blog %}
                     <a class="btn zoombtn" href="{{site.url}}/blog/">
                     {% else %}
-                    <a class="btn zoombtn" href="{{site.url}}/paper-review/">
+                         {% if page.about %}
+                        <a class="btn zoombtn" href="{{site.url}}">
+                        {% else %}
+                        <a class="btn zoombtn" href="{{site.url}}/paper-review/">
+                        {% endif %}
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
                     </a>
