--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -88,10 +88,10 @@
 			<li><a href="{{ site.url }}/blog">Blog</a></li>
             <li>
 				<a href="#">Paper-review</a>
-				<ul class="dl-submenu">
+				<!--<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/paper-review/">All reviews</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
-				</ul>
+				</ul>-->
 			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
