--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -87,7 +87,7 @@
 			</li>
 			<li><a href="{{ site.url }}/blog">Blog</a></li>
             <li>
-				<a href="#">Paper-review</a>
+				<a href="{{ site.url }}/paper-review">Paper-review</a>
 				<!--<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/paper-review/">All reviews</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
